reversing some work panel fixes because they reintroduced some previous issues such as scrolling on iphone problems

--- a/scss/components/_split-page.scss
+++ b/scss/components/_split-page.scss
@@ -9,8 +9,7 @@
   display: grid;
   grid-template-columns: 1fr;
   width: 100vw;
-  height: 100vh;
-  overflow-y: scroll;
+  height: 100%;
 
   @media screen and (min-width: 1020px) {
     grid-template-columns: 1.5fr 2fr;
